# sysmon-validator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: errors.rs  lib.rs  main.rs  models.rs  parser.rs  validator.rs  xsd.rs
src/schemas/: v3_3_schema.xsd  v3_4_schema.xsd  v4_1_schema.xsd  v4_21_schema.xsd  v4_22_schema.xsd  v4_40_schema.xsd  v4_50_schema.xsd  v4_70_schema.xsd  v4_81_schema.xsd  v4_83_schema.xsd  v4_90_schema.xsd
src/tests/test_configs/: comments_config.xml  invalid_event_types.xml  invalid_operator.xml  invalid_schema_version.xml  multiple_filters.xml  non_filterable_event_type.xml  valid_config.xml
