[package]
name = "sysmon_validator"
version = "0.1.0"
edition = "2021"
authors = ["whiterabbit@protonmail.com"]

[lib]
name = "sysmon_validator"
path = "src/lib.rs"

[[bin]]
name = "sysmon_validator"
path = "src/main.rs"

[dependencies]
quick-xml = "0.37.2"
thiserror = "2.0.11"
log = "0.4.25"
env_logger = "0.11.6"
colored = "3.0.0"
regex = "1.11.1"
roxmltree = "0.20.0"
lazy_static = "1.4.0"
include_dir = "0.7.4"

[dev-dependencies]
tempfile = "3.16.0"
sysmon_validator = { path = "." }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
